# renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shell.nix
src/: CMakeLists.txt  commandbucket.cpp  commandbucket.hpp  defines.hpp  glbackend.cpp  glbackend.hpp  glcontextparam.cpp  glcontextparam.hpp  glshader_program.cpp  glshader_program.hpp  glshaderloader.cpp  glshaderloader.hpp  graphicsdevice.cpp  graphicsdevice.hpp  icontextparam.hpp  irenderbackend.hpp  ishader_program.hpp  ishaderloader.hpp  iwindow.hpp  main.cpp  mesh.hpp  sdl2window.cpp  sdl2window.hpp  shader.hpp  shader_attribute.cpp  shader_attribute.hpp  shader_program.cpp  shader_program.hpp  texture.hpp  vertex_buffer.hpp
unittests/: CMakeLists.txt  commandbuckettest.cpp  commandbuckettest.hpp  glcontextparamtest.cpp  glcontextparamtest.hpp  main.cpp  sdl2windowtest.cpp  sdl2windowtest.hpp
